# django.rest.app

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sample.env  start_server.sh
django_app/: settings.py  urls.py
posts/: logger.py  models.py  serializer.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_user_profile.py
profiles/: logger.py  models.py  serializer.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_userprofile_options_alter_userprofile_managers_and_more.py  0003_rename_password_hash_userprofile_password.py  0004_remove_userprofile_password.py  0005_userprofile_password.py  0006_alter_userprofile_managers_userprofile_date_joined_and_more.py  0007_userprofile_is_admin.py  0008_remove_userprofile_is_admin_and_more.py  0009_alter_userprofile_is_active.py  0010_alter_userprofile_password.py  0011_alter_userprofile_password.py  0012_remove_userprofile_password.py  0013_userprofile_password.py  0014_alter_userprofile_managers.py  0015_alter_userprofile_password.py  0016_alter_userprofile_managers.py
tests/: conftest.py
tests/test_posts/: test_posts_model.py
tests/test_profiles/: test_user_profile_model.py
tests/test_views/: test_post_view.py
