[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["EvgeniiShcherbina <eugene@inkit.com>"]
readme = "README.md"
packages = [{include = "django_app"}]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
