[tool.poetry]
name = "django-rest-app"
version = "0.1.0"
description = ""
authors = ["EvgeniiShcherbina <eugene@inkit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
requests = "^2.28.1"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
